--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   # cupertino_icons: ^0.1.2
 
   barcode_scan: ^0.0.8
-  cloud_firestore: 0.7.4
+  cloud_firestore: 0.8.2+3
   firebase_auth: ^0.6.6
   firebase_analytics: ^1.0.6
   firebase_storage: ^1.0.4
