--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_storage: ^1.0.4
   firebase_storage_image: ^0.2.0
   image_picker: ^0.4.10
+  intl: ^0.15.7
   meta: ^1.1.6
   provider: ^1.1.1
   qr_flutter: ^1.1.5
@@ -57,6 +58,8 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.io/assets-and-images/#from-packages
+  assets:
+    - assets/images/avatar-loading.gif
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
