--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   # cupertino_icons: ^0.1.2
 
+  async: ^2.0.8
   barcode_scan: ^0.0.8
   cloud_firestore: 0.8.2+3
   firebase_auth: ^0.6.6
