--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,14 @@ dependencies:
   async: ^2.0.8
   barcode_scan: ^0.0.8
   cloud_firestore: 0.8.2+3
+  firebase_analytics: ^1.1.0
   firebase_auth: ^0.6.6
-  firebase_analytics: ^1.0.6
   firebase_storage: ^1.0.4
   firebase_storage_image: ^0.2.0
   image_picker: ^0.4.10
   intl: ^0.15.7
   meta: ^1.1.6
+  onesignal: ^1.0.3
   qr_flutter: ^1.1.5
 
 dev_dependencies:
