--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   async: ^2.0.8
   barcode_scan: ^0.0.8
   cloud_firestore: 0.8.2+3
+  cloud_functions: ^0.0.5
+  device_info: ^0.3.0
   firebase_analytics: ^1.1.0
   firebase_auth: ^0.6.6
   firebase_storage: ^1.0.4
