--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,6 @@ build/
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
-**/android/key.properties
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
@@ -72,8 +71,8 @@ build/
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 # Firebase key files
-GoogleService-Info.plist
-android/app/google-services.json
+**/ios/Runner/GoogleService-Info.plist
+**/android/app/google-services.json
 
 # Firebase functions config
-.runtimeconfig.json
+**/functions/.runtimeconfig.json
