--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,6 +1,6 @@
 flutter_icons:
-  image_path: "assets/images/icon.png"
+  image_path: "assets/icon_materials/icon.png"
   adaptive_icon_background: "#54A0FF"
-  adaptive_icon_foreground: "assets/images/icon_foreground.png"
+  adaptive_icon_foreground: "assets/icon_materials/icon_foreground.png"
   android: true
   ios: true
