Testing Firestore's security rules (#26)
* [WIP] Add first tests

* Move firestore files

* Add friend code test

* Add tests for firestore security rules

* Add "deploy" command

* Add rules

* DummyNotificationManager will set dummy value as a pushNotificationDestinationId

* Format codes with prettier

--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,9 @@
 {
   "name": "functions",
   "scripts": {
+    "lint": "prettier --list-different ./src/**/*.ts ./src/**/*.tsx",
+    "format": "prettier --write ./src/**/*.ts ./src/**/*.tsx",
+    "check": "tsc --noEmit --pretty",
     "build": "tsc",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
